# meta-feature-analysis

./: .gitignore  README.md  pyproject.toml  ruff.toml
configs/: config_0.yaml  config_1.yaml  config_2.yaml  config_3.yaml  config_4.yaml  config_5.yaml  default.yaml  paper_exploratory_features.yaml  paper_mcelfresh_retest.yaml  paper_mcelfresh_source_locked_pymfe.yaml  paper_modern_all_nn_like_vs_gbdt.yaml  paper_modern_foundation_vs_tree.yaml  paper_modern_tabpfn_new_vs_tabicl_new.yaml  paper_modern_tabpfn_old_vs_tabicl_old.yaml  paper_modern_transformer_vs_gbdt.yaml
notebooks/: 01_gbdt_vs_nn.ipynb  01_mfa.ipynb  01_mfa_fold_level.ipynb  02_custom_comparison.ipynb  02_mfa.ipynb  03_hypothesis_check_nn_vs_gbdt.ipynb  03_mfa.ipynb  04_methodology_walkthrough.ipynb  05_followup_after_univariate.ipynb  06_predictive_followup.ipynb  07_fix_categorical_absence_cache.ipynb  08_main_report_predictive_figures.ipynb  09_main_report_tables.ipynb  test.ipynb
scripts/: warm_cache.py  warm_cache.sh
src/mfa/: __init__.py  _logging.py  aggregation.py  cache.py  config.py  groups.py  parallel.py  pipeline.py  predictive.py  preprocessing.py  types.py
tests/: conftest.py  test_aggregation.py  test_cache.py  test_config.py  test_correction.py  test_correlation.py  test_loader.py  test_metafeatures_basic.py  test_metafeatures_irregularity.py  test_metafeatures_pymfe.py  test_multivariate.py  test_normalization.py  test_pairwise_gaps.py  test_parallel.py  test_pipeline.py  test_predictive.py  test_preprocessing.py  test_split_decoder.py  test_statistical_sanity.py
(+17 files in other folders)
